Fixed images stretching & cramped footer texts

--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -49,7 +49,6 @@ a:hover {
 
 .footer-socials-wrapper {
   width: 50vw;
-  height: 50vh;
 
   display: flex;
   justify-content: center;
