--- a/frontend/src/components/RecentProjects.css
+++ b/frontend/src/components/RecentProjects.css
@@ -7,7 +7,7 @@
   align-items: center;
   flex-wrap: wrap;
   flex-direction: column;
-  padding-top: 200px;
+  padding-top: 100px;
   padding-bottom: 200px;
   margin: 0px;
   background-color: #f5f6f5;
